# lab.seonghyeon.dev

./: .gitignore  README.md
ddclient/: docker-compose.yml
homelabctl/: pyproject.toml
homelabctl/fabfile/: __init__.py  pi.py  util.py
services/coredns/: docker-compose.yml
services/swarmpit/: docker-compose.yml
services/traefik/: docker-compose.yml
services/unifi-controller/: docker-compose.yml
services/viz/: docker-compose.yml
swarmpit/: docker-compose.yml
