[tool.poetry]
name = "pi_provisioner"
version = "0.1.0"
description = "Provisioning rpi node"
authors = ["Seonghyeon Kim <self@seonghyeon.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
fabric = "^2.5.0"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
isort = "^5.5.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
